// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Построение building label parts Building 1`] = `
Array [
  Object {
    "data": Object {
      "siteId": "site-id",
    },
    "name": "site",
    "node": "Ненастье",
    "separator": ", ",
  },
]
`;

exports[`Построение building label parts Building with village 1`] = `
Array [
  Object {
    "data": Object {
      "villageId": "village-id",
      "villageName": "Бавария CLUB",
    },
    "name": "village",
    "node": "КП «Бавария CLUB»",
    "separator": ", ",
  },
]
`;

exports[`Построение building label parts Floors offered 1`] = `
Array [
  Object {
    "name": "floorsOffered",
    "node": "3 этаж из 1",
    "separator": ", ",
  },
]
`;

exports[`Построение building label parts Floors offered without total floors 1`] = `
Array [
  Object {
    "name": "floorsOffered",
    "node": "3 этаж",
    "separator": ", ",
  },
]
`;

exports[`Построение building label parts New building 1`] = `
Array [
  Object {
    "name": "newBuilding",
    "node": "новостройка",
  },
]
`;

exports[`Построение building label parts New building with built year (2021) 1`] = `
Array [
  Object {
    "name": "newBuilding",
    "node": "новостройка",
  },
  Object {
    "name": "builtYear",
    "node": "2020 г.",
    "separator": " ",
  },
]
`;

exports[`Построение building label parts New building with built year (2023) 1`] = `
Array [
  Object {
    "name": "newBuilding",
    "node": "новостройка",
  },
  Object {
    "name": "builtYear",
    "node": "1 кв. 2021 г.",
    "separator": " ",
  },
]
`;

exports[`Построение building label parts Village 1`] = `
Array [
  Object {
    "data": Object {
      "villageId": "village-id",
      "villageName": "Бавария CLUB",
    },
    "name": "village",
    "node": "КП «Бавария CLUB»",
    "separator": ", ",
  },
]
`;
